@@ -32,6 +32,7 @@ Bugs fixed:
 - 2780126 EnumerateClassNames with ClassName=NULL gets error
 - 2778276 ClassProvider exiting by CreateClass
 - 2784240 Possible array access overflow in cimXmlParser
+- 2779966 Use upcalls for ei/ein in indCIMXMLHandler
 
 Changes in 1.3.3
 ================
